# pd_motion_control

./: CMakeLists.txt  README.md  package.xml
action/: PDTrajectory.action
config/: parameter.yaml
dynamic_cfg/: pdController.cfg
include/pd_motion_control/: kinematics.h
launch/: old_simulation.launch  pd_simulation.launch  simulation.launch
msg/: GetPDControls.msg  GetPDStates.msg  RobotState.msg
src/: kinematics.cpp
srv/: ComputeFK.srv  ComputeJacobian.srv  MoveTo.srv
test/: test_kinematic_chain.py
