<?xml version="1.0"?>
<package format="2">
  <name>pd_motion_control</name>
  <version>0.0.0</version>
  <description>The pd_motion_control package</description>

  <author email="krupampatel205@gmail.com">Krupa Patel</author>
  <maintainer email="myp@ipa.fraunhofer.de">Mayank Patel</maintainer>

  <license>IPA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>boost</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>

  <!--exec_depend>robot_state_publisher</exec_depend-->

</package>
